# ChangeLog for media-libs/libmpdclient
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libmpdclient/ChangeLog,v 1.27 2011/02/26 08:28:36 angelos Exp $

  26 Feb 2011; <angelos@gentoo.org> libmpdclient-2.4.ebuild:
  Added examples USE flag to install example.c

  26 Feb 2011; Michael Weber <xmw@gentoo.org> libmpdclient-2.4.ebuild:
  arm/ppc/sparc stable (bug 356527)

  15 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org>
  libmpdclient-2.3.ebuild:
  ppc64 stable wrt #348746

*libmpdclient-2.4 (14 Jan 2011)

  14 Jan 2011; Tim Harder <radhermit@gentoo.org> +libmpdclient-2.4.ebuild:
  Version bump and set EAPI=3.

  13 Jan 2011; Brent Baude <ranger@gentoo.org> libmpdclient-2.3.ebuild:
  Marking libmpdclient-2.3 ppc for bug 348746

  13 Jan 2011; Jeroen Roovers <jer@gentoo.org> libmpdclient-2.3.ebuild:
  Stable for HPPA (bug #348746).

  04 Jan 2011; Michael Weber <xmw@gentoo.org> libmpdclient-2.3.ebuild:
  sparc stable (bug 348746)

  31 Dec 2010; Thomas Kahle <tomka@gentoo.org> libmpdclient-2.3.ebuild:
  x86 stable per bug 348746

  26 Dec 2010; Markus Meier <maekke@gentoo.org> libmpdclient-2.3.ebuild:
  arm stable, bug #348746

  21 Dec 2010; Markos Chandras <hwoarang@gentoo.org> libmpdclient-2.3.ebuild:
  Stable on amd64 wrt bug #348746

  01 Nov 2010; Michael Weber <xmw@gentoo.org> libmpdclient-2.1.ebuild:
  arm stable

  19 Sep 2010; Michael Weber <xmw@gentoo.org> libmpdclient-2.1.ebuild:
  Added ~arm keyword

  19 Sep 2010; Michael Weber <xmw@gentoo.org> libmpdclient-2.3.ebuild:
  Added ~arm keyword

*libmpdclient-2.3 (03 Sep 2010)

  03 Sep 2010; <angelos@gentoo.org> libmpdclient-2.1.ebuild,
  +libmpdclient-2.3.ebuild:
  Version bump (bug #333929) and block doxygen-1.7 (bug #333931)

  21 May 2010; Christoph Mende <angelos@gentoo.org>
  -libmpdclient-2.0.ebuild:
  Removed old

  14 Apr 2010; Markos Chandras <hwoarang@gentoo.org>
  libmpdclient-2.1.ebuild:
  Stable on amd64 wrt bug #309391
