@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libmpdclient/Attic/libmpdclient-2.4.ebuild,v 1.3 2011/02/26 08:28:36 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libmpdclient/Attic/libmpdclient-2.4.ebuild,v 1.4 2011/02/27 22:09:03 hwoarang Exp $
 
 EAPI=3
 
@@ -10,7 +10,7 @@ SRC_URI="mirror://sourceforge/musicpd/${P}.tar.bz2"
 
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="~amd64 arm ~hppa ppc ~ppc64 sparc ~x86"
+KEYWORDS="amd64 arm ~hppa ppc ~ppc64 sparc ~x86"
 IUSE="examples"
 
 src_install() {
