@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/mpc/Attic/mpc-0.20.ebuild,v 1.2 2011/02/26 00:49:07 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/mpc/Attic/mpc-0.20.ebuild,v 1.3 2011/02/27 22:09:50 hwoarang Exp $
 
 EAPI=2
 inherit bash-completion
@@ -11,7 +11,7 @@ SRC_URI="mirror://sourceforge/musicpd/${P}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 arm ~hppa ppc ~ppc64 sparc ~x86"
+KEYWORDS="amd64 arm ~hppa ppc ~ppc64 sparc ~x86"
 IUSE="iconv"
 
 RDEPEND=">=media-libs/libmpdclient-2.2
