@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/mpc
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/mpc/ChangeLog,v 1.77 2011/02/26 00:49:07 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/mpc/ChangeLog,v 1.78 2011/02/27 22:09:50 hwoarang Exp $
+
+  27 Feb 2011; Markos Chandras <hwoarang@gentoo.org> mpc-0.20.ebuild:
+  Stable on amd64 wrt bug #356527
 
   26 Feb 2011; Michael Weber <xmw@gentoo.org> mpc-0.20.ebuild:
   arm/ppc/sparc stable (bug 356527)
