@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libmpdclient
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libmpdclient/ChangeLog,v 1.27 2011/02/26 08:28:36 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libmpdclient/ChangeLog,v 1.28 2011/02/27 22:09:03 hwoarang Exp $
+
+  27 Feb 2011; Markos Chandras <hwoarang@gentoo.org> libmpdclient-2.4.ebuild:
+  Stable on amd64 wrt bug #356527
 
   26 Feb 2011; <angelos@gentoo.org> libmpdclient-2.4.ebuild:
   Added examples USE flag to install example.c
